Bug 1618260 - Fix number input so that it honors overflow-clip-box-block. r=mats
This never worked, but it's more visible with the new form controls which have
more padding.

Make the anonymous div and co a pseudo-element, so that they inherit from the
<input> properly in all cases. This works for non-number inputs because the
editor root is a direct child of the <input>, but it doesn't for number inputs
because there's a flex wrapper in between.

This way overflow-clip-box: inherit does what we want. Reset the padding in the
inline direction, as the padding for <input type=number> applies to the arrow
boxes as well, and thus we'd double-apply it.

Differential Revision: https://phabricator.services.mozilla.com/D65271

UltraBlame original commit: 31c1ad4ac9dbdf0b661fbcc0034e19cdb8a07e53

--- a/layout/style/contenteditable.css
+++ b/layout/style/contenteditable.css
@@ -3,7 +3,7 @@
 
 
 
-@namespace url(http:
+@namespace url(http://www.w3.org/1999/xhtml); 
 
 
 
@@ -15,11 +15,6 @@
 
 *|*::-moz-canvas {
   cursor: text;
-}
-
-input:-moz-read-write > .anonymous-div:-moz-read-only,
-textarea:-moz-read-write > .anonymous-div:-moz-read-only {
-  user-select: text;
 }
 
 
